toggle to expand on the click of the lesson name in course content

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_content.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_content.html
@@ -66,6 +66,7 @@
                                 if (child_key === 'id'){
                                     activity_ids.push(child_val)
                                 }
+                                $li.children('div').addClass('jqtree-toggler')
                             })
                         }
                         isLessonComplete = activity_ids.every(function(val) {
