showing alt names first for lesson and activity hierarchy

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
@@ -80,7 +80,7 @@
                       <img src="/static/ndf/images/asset.png">
                   </div>
                   <div class="asset_text">
-                      <div class="asset_title">{{each.name|truncatechars:25}}</div>
+                      <div class="asset_title">{% firstof each.altnames|truncatechars:25 each.name|truncatechars:25}}</div>
                       <div class="asset_desc">{{each.content|striptags|truncatechars:25}}</div>
                   </div>
                 </div>
