--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
@@ -72,7 +72,7 @@
         </div>
         <div class="row listing-row"> 
           {% for each in other_translations %}
-            <a href="{% url 'view_course_page' group_id each.pk %}"  title="{{each.name}}">
+            <a href="{% url 'view_course_page' group_id each.pk %}"  title="{% firstof each.altnames each.name %}">
               <div class="small-12 medium-6 large-3 columns ">
                 <div class="asset_tile">
                   <div class="asset_preview">
@@ -129,7 +129,7 @@
                                 {% endif %}
                             </div>
                             <div class="asset_text">
-                                <div class="asset_title" title="{{each.name}}">{% firstof each.altnames|truncatechars:25 each.name|truncatechars:25 %}</div>
+                                <div class="asset_title" title="{% firstof each.altnames each.name %}">{% firstof each.altnames|truncatechars:25 each.name|truncatechars:25 %}</div>
                                     {% if user.is_authenticated  and not group_object.edit_policy == "NON_EDITABLE"  or gstaff_access %}
                                     </a>
                                     <input type="checkbox" class="activitynode" name="activitynode" value="{{each.pk}}" style="margin:0; float:right;" class="asset_content_checkbox">
