--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/horizontal_card.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/horizontal_card.html
@@ -24,6 +24,10 @@
                 {% trans "Subject" %}: {{node_attrs.educationalsubject}}
             </span class="card_label">
             <p class="ellipsis"></p>
+            <span class="card_label">
+                {% trans "No. of Units" %}: {{node.collection_set|length}}
+            </span class="card_label">
+            <p class="ellipsis"></p>
                 <span class="card_label">
                    {% trans "Grade" %} : {{node_attrs.educationallevel|join:', '}}
                 </span class="card_label">
