--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_ajax_content.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_ajax_content.html
@@ -647,7 +647,7 @@ Still keeping for future ref (if needed).
 
         {% if topic %}
           <div id="topic-resources">
-          {% include "ndf/topic_resources_listing.html" %}
+          {% include "ndf/topic_resources_listing.html" with node=node %}
           </div>
         {% endif %}
 
