--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/test_template.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/test_template.html
@@ -63,12 +63,12 @@
 
 
     <script type="text/javascript">
-        var baseTree = [{
-            name: 'Add Branch',
-            class: 'create_branch',
-            type: 'branch'
-        }];
-        //var baseTree = [{"name":"asdasd","description":"","is_open":true,"children":[{"name":"asdasd","isLeaf":false,"is_open":true,"children":[{"name":"Add Division","class":"create_division"}]},{"name":"Add Division","class":"create_division"}]},{"name":"Add Branch","class":"create_branch"}];
+        // var baseTree = [{
+        //     name: 'Add Branch',
+        //     class: 'create_branch',
+        //     type: 'branch'
+        // }];
+        var baseTree = [{"name":"asdasd","description":"","is_open":true,"children":[{"name":"asdasd","isLeaf":false,"is_open":true,"children":[{"name":"Add Division","class":"create_division"}]},{"name":"Add Division","class":"create_division"}]},{"name":"Add Branch","class":"create_branch"}];
         var selectedBranch;
         var selectedDivison;
         var isUpdateOperation;
