Note book content text color updated.

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
@@ -2024,6 +2024,7 @@ ul.jqtree-tree .jqtree-toggler:hover {
   padding: 2em 2em 1em;
   background: #fff;
   margin: 0em;
+  color: #000000;
 }
 /* line 2177, ../../../scss/_clix2017.scss */
 .notebook .notebook-body .note-page .note-content .note-header > div {
