--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -2171,7 +2171,7 @@ ul.jqtree-tree .jqtree-toggler {
         padding: 2em 2em 1em;
         background: #fff;
         margin: 0em;
-
+        color: #000000;
         .note-header {
 
           >div {
