--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/curriculum_listing.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/curriculum_listing.html
@@ -2,10 +2,37 @@
 {% load i18n %}
 {% load ndf_tags %}
 {% block body_content %}
-        <a href="{% url  'create_edit_curriculum' group_id %}">
-        Create new curriculum
-        </a>
-        {%  for each in nodes %}
-            {% include "ndf/asset_card.html" with each_asset=each first_arg=group_id  second_arg=each.pk url_name="curriculum_detail" %}
-        {% endfor %}
+    <div class="curriculum_list_header">
+    	<span class="title-curriculum">Your courses</span>
+    	<div class="add-curriculum">
+    		<a href="{% url  'create_edit_curriculum' group_id %}">
+    	    	<i class="fa fa-pencil-square-o" aria-hidden="true"></i> Create new curriculum
+        	</a>
+    	</div>
+    </div>
+    <div class="curriculum_listing">
+    	<div class="curriculum_content">
+    		<div class="curriculum_content_left">
+    			<a href="#"><img src="/static/ndf/images/curr-curriculum.png" style="height: 100px;"></a>
+    			<div class="curriculum_content_details">
+            		<a href="#" class="hyperlink-style">Title: </a>
+        			<a href="#" class="hyperlink-info"> No. of Sections: </a>
+        			<a href="#" class="hyperlink-info"> Created on: </a>
+    			</div>
+    		</div>
+    	</div>
+    	<div class="curriculum_content">
+    		<div class="curriculum_content_left">
+    			<a href="#"><img src="/static/ndf/images/curr-curriculum.png" style="height: 100px;"></a>
+    			<div class="curriculum_content_details">
+            		<a href="#" class="hyperlink-style">Title: </a>
+        			<a href="#" class="hyperlink-info"> No. of Sections: </a>
+        			<a href="#" class="hyperlink-info"> Created on: </a>
+    			</div>
+    		</div>
+    	</div>
+    </div>
+
+
+
 {% endblock body_content %}
