--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms.html
@@ -41,12 +41,12 @@
                   <a href="{% url 'unit_edit' groupid group_object.pk %}" class="fi-pencil"> {% trans "Edit" %}</a>
               </li>
               <li>
-                  <a href="{% url 'curriculum_list' groupid  %}" class="fi-pencil"> {% trans "Add Curriculum" %}</a>
+                  <a href="{% url 'curriculum_list' groupid  %}"><img src="/static/ndf/images/lesson_planning.png" style="height:20px;"/> {% trans "Add Curriculum" %}</a>
               </li>
               {% if_edit_course_structure as edit_course_struct %}
               {% if edit_course_struct %}
               <li>
-                  <a href="{% url 'unit_detail' groupid  %}" target="_blank" class="fi-pencil"> {% trans "Edit Course Structure" %}</a>
+                  <a href="{% url 'unit_detail' groupid  %}" target="_blank"><img src="/static/ndf/images/lesson_planning.png"/> {% trans "Edit Course Structure" %}</a>
               </li>
               {% endif %}
               <li>
